--- a/projects.html
+++ b/projects.html
@@ -5,17 +5,17 @@
     <link rel="stylesheet" type="text/css" href="./css/projects.css">
     <link rel="stylesheet" type="text/css" href="./css/global.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <script src="https://kit.fontawesome.com/506c3b838d.js" crossorigin="anonymous"></script>
+    <link href="https://cdn.jsdelivr.net/npm/remixicon@3.5.0/fonts/remixicon.css" rel="stylesheet">
 </head>
 <body>
     <header>
         <nav>
             <input type="checkbox" id="check" class="checkbtn">
             <label for="check" class="checkbtn">
-                <i class="fa fa-bars"></i>           
+                <i class="ri-menu-line"></i>          
             </label>
             <label for="check" class="xbtn">
-                <i class="fa-solid fa-rectangle-xmark"></i>
+                <i class="ri-close-fill"></i>
             </label>
             <label class="name">
                 <span class="first-name">Andrew</span>
@@ -26,29 +26,84 @@
                 <li class="animated bounce"><a class="active" href="projects.html">Projects</a></li>
                 <li><a href="aboutMe.html">About Me</a></li>
                 <li><a href="contact.html">Contact</a></li>
+                <li><a class="class-links-btn" id="class-links-btn">Class Links ⬅️</a></li>
             </ul>
+            <div class="class-dropdown">
+                <div class="dropdown-item"><a class="class-links" href="https://mattm401.github.io/">Course Website</a></div>
+                <div class="dropdown-item"><a class="class-links" href="https://yang-yu-xing.github.io/">NEXT STUDENT</a></div>
+                <div class="dropdown-item"><a class="class-links" href="https://estipes.github.io/">PREVIOUS STUDENT</a></div>
+            </div>  
             <script src='./javascript/scroll.js'></script>
         </nav>
     </header>
     <div class="container">
+        <div class="project-title"><h1>Project "Lens"</h1></div>
         <div class="left-sub-container">
-            <a class="project-image" href="http://cisc-capstone-teams.pages.eecis.udel.edu/Home">
-                <img src="./pics/gene.png" alt="Gene">
+            <a class="project-image-left" href="https://team-lens.github.io/Project-Lens/">
+                <img src="./pics/lens.png" alt="Gene">
             </a>
             <div class="left-list">
                 <ul>
+                    <li>A photo website similar to Instagram’s with , built for photography enthusiasts</li>
+                    <li>The site would be like linkedin, where users can hire and create associations with other users</li>
+                    <li>Used HTML, CSS, JavaScript, Google Firebase</li>
+                </ul>
+                <h2>Challenges</h2>
+                <ul>
+                    <li>Using backend software data and displaying that data on a live site</li>
+                    <li>Lots of work with Javascript which was new to me</li>
+                </ul>
+            </div>
+        </div>
+        <p class="p-left">Collaboration: Alexander Daley, Mbiet Uko, Pranav Kamath</p>
+        <div class="project-title"><h1>Senior Design Project</h1></div>
+        <div class="right-sub-container">
+            <div class="right-list">
+                <ul>
                     <li>This is my Senior Design Project that my team and I worked on alongside Professor Duncan, a UD Professor of Biology</li>
                     <li>We were tasked with building a website capable of displaying gene data</li>
-                    <li>The site consists of a gene search function, three different plot types, and a gene grid option</li>
+                    <li>Used React Typescript, Plotly plotting library, and Router</li>
                 </ul>
-                <p>Challenges:</p>
+                <h2>Challenges</h2>
                 <ul>
                     <li>Manipulating the data structure in a way that makes it readable to our plotting library</li>
                     <li>Working with massive data sets</li>
                 </ul>
             </div>
+            <a class="project-image-right" href="http://cisc-capstone-teams.pages.eecis.udel.edu/Home">
+                <img src="./pics/gene.png" alt="Gene">
+            </a>
         </div>
-        <p class="p-left">Collaboration: Kurt Hammen, Mar Tejador, Caroline Robinette, Justin Tenerelli</p>
-    </div>     
+        <p class="p-right">Collaboration: Kurt Hammen, Mar Tejador, Caroline Robinette, Justin Tenerelli</p>
+        <div class="project-title"><h1>Student Course Registration Site</h1></div>
+        <div class="left-sub-container">
+            <a class="project-image-left" href="https://ud-cisc275-s22.github.io/cis-scheduler-team-11/">
+                <img src="./pics/275.png" alt="Gene">
+            </a>
+            <div class="left-list">
+                <ul>
+                    <li>A photo website similar to Instagram’s with , built for photography enthusiasts</li>
+                    <li>The site would be like linkedin, where users can hire and create associations with other users</li>
+                    <li>Used HTML, CSS, JavaScript, Google Firebase</li>
+                </ul>
+                <h2>Challenges</h2>
+                <ul>
+                    <li>Using backend software data and displaying that data on a live site</li>
+                    <li>Lots of work with Javascript which was new to me</li>
+                </ul>
+            </div>
+        </div>
+        <p class="p-left">Collaboration: Andrew Gkonos, Shaun Gupta</p>
+        <div class="project-title"><h1>And of course, my own website which you are on!</h1></div>
+    </div>
+    <footer>
+        <h3>My Contact Information</h3>
+        <div class="contact-info">
+            <a href="https://github.com/andrewl15"><i class="ri-github-fill"></i><p>Github</p></a>
+            <a href="https://www.linkedin.com/in/andrew-long-457171164/"><i class="ri-linkedin-box-fill"></i><p>Linkedin</p></a>
+            <i class="ri-mail-line"></i><p>andrewl@udel.edu</p>
+        </div>
+    </footer>
+    <script src="./javascript/navbar.js"></script>
 </body>
 </html>
