--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" type="text/css" href="./css/contact.css">
     <link rel="stylesheet" type="text/css" href="./css/global.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <script src="https://kit.fontawesome.com/506c3b838d.js" crossorigin="anonymous"></script>
+    <link href="https://cdn.jsdelivr.net/npm/remixicon@3.5.0/fonts/remixicon.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
     <script>
     (function(){
@@ -18,10 +18,10 @@
         <nav>
             <input type="checkbox" id="check" class="checkbtn">
             <label for="check" class="checkbtn">
-                <i class="fa fa-bars"></i>           
+                <i class="ri-menu-line"></i>          
             </label>
             <label for="check" class="xbtn">
-                <i class="fa-solid fa-rectangle-xmark"></i>
+                <i class="ri-close-fill"></i>
             </label>
             <label class="name">
                 <span class="first-name">Andrew</span>
@@ -32,7 +32,13 @@
                 <li><a href="projects.html">Projects</a></li>
                 <li><a href="aboutMe.html">About Me</a></li>
                 <li class="animated bounce"><a class="active" href="contact.html">Contact</a></li>
+                <li><a class="class-links-btn" id="class-links-btn">Class Links ⬅️</a></li>
             </ul>
+            <div class="class-dropdown">
+                <div class="dropdown-item"><a class="class-links" href="https://mattm401.github.io/">Course Website</a></div>
+                <div class="dropdown-item"><a class="class-links" href="https://yang-yu-xing.github.io/">NEXT STUDENT</a></div>
+                <div class="dropdown-item"><a class="class-links" href="https://estipes.github.io/">PREVIOUS STUDENT</a></div>
+            </div>  
             <script src='./javascript/scroll.js'></script>
         </nav>
     </header>
@@ -90,9 +96,10 @@
     <div class="email-confirm">
         <div class="email-sent">
             <p>Email Sent</p>
-            <i class="fa-solid fa-circle-check fa-2xl" style="color: #4ef48b;"></i>
+            <i class="ri-checkbox-circle-fill"></i>
         </div>
     </div>    
     <script src='./javascript/contact.js'></script>
+    <script src="./javascript/navbar.js"></script>
 </body>
 </html>
