Get a nice picture

--- a/contact.html
+++ b/contact.html
@@ -32,6 +32,7 @@
                 <li><a href="projects.html">Projects</a></li>
                 <li><a href="aboutMe.html">About Me</a></li>
                 <li class="animated bounce"><a class="active" href="contact.html">Contact</a></li>
+                <li><a href="resume.html">Resume</a></li>
                 <li><a class="class-links-btn" id="class-links-btn">Class Links ⬅️</a></li>
             </ul>
             <div class="class-dropdown">
