--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
                 <li><a href="projects.html">Projects</a></li>
                 <li><a href="aboutMe.html">About Me</a></li>
                 <li><a href="contact.html">Contact</a></li>
+                <li><a href="resume.html">Resume</a></li>
                 <li><a class="class-links-btn" id="class-links-btn">Class Links ⬅️</a></li>
             </ul>
             <div class="class-dropdown">
@@ -38,8 +39,8 @@
     </header>
     <div class="container">
         <h1>Hello 👋, my name is Andrew Long,</h1>
-        <h2>I go by Andrew</h2>
-        <p>Course: CISC474</p>
+        <h2>Goals:</h2>
+        <p>Land a respectable Software Engineering position</p>
         <p>Assignment: Personal Web Page x</p>
         <p>Email: andrewl@udel.edu</p>
         <div class="image">
