--- a/projects.html
+++ b/projects.html
@@ -26,6 +26,7 @@
                 <li class="animated bounce"><a class="active" href="projects.html">Projects</a></li>
                 <li><a href="aboutMe.html">About Me</a></li>
                 <li><a href="contact.html">Contact</a></li>
+                <li><a href="resume.html">Resume</a></li>
                 <li><a class="class-links-btn" id="class-links-btn">Class Links ⬅️</a></li>
             </ul>
             <div class="class-dropdown">
@@ -51,7 +52,7 @@
                 <h2>Challenges</h2>
                 <ul>
                     <li>Using backend software data and displaying that data on a live site</li>
-                    <li>Lots of work with Javascript which was new to me</li>
+                    <li>Lots of work with JavaScript which was new to me</li>
                 </ul>
             </div>
         </div>
@@ -82,14 +83,14 @@
             </a>
             <div class="left-list">
                 <ul>
-                    <li>A photo website similar to Instagram’s with , built for photography enthusiasts</li>
-                    <li>The site would be like linkedin, where users can hire and create associations with other users</li>
-                    <li>Used HTML, CSS, JavaScript, Google Firebase</li>
+                    <li>Developing an improved version of the WebReg registration system available to students</li>
+                    <li>First major software engineering project</li>
+                    <li>Used React, Typescript</li>
                 </ul>
                 <h2>Challenges</h2>
                 <ul>
-                    <li>Using backend software data and displaying that data on a live site</li>
-                    <li>Lots of work with Javascript which was new to me</li>
+                    <li>Working as a team collaborative porject with AGILE</li>
+                    <li>Working with JSON data and parsing it correctly</li>
                 </ul>
             </div>
         </div>
