Might be done, checking for site errors

--- a/index.html
+++ b/index.html
@@ -38,13 +38,18 @@
         </nav>
     </header>
     <div class="container">
-        <h1>Hello 👋, my name is Andrew Long,</h1>
-        <h2>Goals:</h2>
-        <p>Land a respectable Software Engineering position</p>
-        <p>Assignment: Personal Web Page x</p>
-        <p>Email: andrewl@udel.edu</p>
-        <div class="image">
-            <img src="./pics/me.jpg" alt="Me in Germnany">
+        <div class="home-img">
+            <div class="glowing-circle">
+                <div class="image">
+                    <img src="./pics/me.jpg">
+                </div>
+            </div>
+        </div>
+        <div class="info">
+            <p>Hi,👋 My name is Andrew Long</p>
+            <p>I am a computer science student from the University of Delaware</p>
+            <p>My goals with this site was to get better at CSS and general HTML structuring</p>
+            <p></p>
         </div>
     </div>
     <footer>
