--- a/projects.html
+++ b/projects.html
@@ -45,7 +45,7 @@
             </a>
             <div class="left-list">
                 <ul>
-                    <li>A photo website similar to Instagram’s with , built for photography enthusiasts</li>
+                    <li>A photo website similar to Instagram’s, built for photography enthusiasts</li>
                     <li>The site would be like linkedin, where users can hire and create associations with other users</li>
                     <li>Used HTML, CSS, JavaScript, Google Firebase</li>
                 </ul>
@@ -58,8 +58,11 @@
         </div>
         <p class="p-left">Collaboration: Alexander Daley, Mbiet Uko, Pranav Kamath</p>
         <div class="project-title"><h1>Senior Design Project</h1></div>
-        <div class="right-sub-container">
-            <div class="right-list">
+        <div class="left-sub-container">
+            <a class="project-image-left" href="http://cisc-capstone-teams.pages.eecis.udel.edu/Home">
+                <img src="./pics/gene.png" alt="Gene">
+            </a>
+            <div class="left-list">
                 <ul>
                     <li>This is my Senior Design Project that my team and I worked on alongside Professor Duncan, a UD Professor of Biology</li>
                     <li>We were tasked with building a website capable of displaying gene data</li>
@@ -71,11 +74,8 @@
                     <li>Working with massive data sets</li>
                 </ul>
             </div>
-            <a class="project-image-right" href="http://cisc-capstone-teams.pages.eecis.udel.edu/Home">
-                <img src="./pics/gene.png" alt="Gene">
-            </a>
         </div>
-        <p class="p-right">Collaboration: Kurt Hammen, Mar Tejador, Caroline Robinette, Justin Tenerelli</p>
+        <p class="p-left">Collaboration: Kurt Hammen, Mar Tejador, Caroline Robinette, Justin Tenerelli</p>
         <div class="project-title"><h1>Student Course Registration Site</h1></div>
         <div class="left-sub-container">
             <a class="project-image-left" href="https://ud-cisc275-s22.github.io/cis-scheduler-team-11/">
