Pretty much done Assignment 3, fixed alt error

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <div class="home-img">
             <div class="glowing-circle">
                 <div class="image">
-                    <img src="./pics/me.jpg">
+                    <img src="./pics/me.jpg" alt="me in Germany">
                 </div>
             </div>
         </div>
