added google analytics

--- a/resume.html
+++ b/resume.html
@@ -2,6 +2,14 @@
 <html lang="en">
 <head>
     <title>Resume Page</title>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-9ZCFW84LPH"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-9ZCFW84LPH');
+    </script>
     <link rel="stylesheet" type="text/css" href="./css/resume.css">
     <link rel="stylesheet" type="text/css" href="./css/global.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
