--- a/aboutMe.html
+++ b/aboutMe.html
@@ -35,13 +35,7 @@
                 <li class="animated bounce"><a class="active" href="aboutMe.html">About Me</a></li>
                 <li><a href="contact.html">Contact</a></li>
                 <li><a href="resume.html">Resume</a></li>
-                <li><a class="class-links-btn" id="class-links-btn">Class Links ⬅️</a></li>
             </ul>
-            <div class="class-dropdown">
-                <div class="dropdown-item"><a class="class-links" href="https://mattm401.github.io/">Course Website</a></div>
-                <div class="dropdown-item"><a class="class-links" href="https://yang-yu-xing.github.io/">NEXT STUDENT</a></div>
-                <div class="dropdown-item"><a class="class-links" href="https://estipes.github.io/">PREVIOUS STUDENT</a></div>
-            </div>  
             <script src='./javascript/scroll.js'></script>
         </nav>
     </header>
@@ -49,18 +43,17 @@
         <h1>Andrew Long</h1>
         <div class="info">
             <p>- Hello, my name is Andrew</p>
-            <p>- I am a computer science BS student with a custom concentration in data science and software engineering</p>
-            <p>- My favorite point in my time here was software engineering with the react tools.</p>
-            <p>- I have spent a lot of time working with react typescript and I am looking forward to learn more in this class</p>
+            <p>- I am a recent Alumni of the University of Delaware and Tech Elevator</p>
+            <p>- I really enjoy the full-stack development process</p>
+            <p>- I have spent a lot of time working with Java, Javascript, Typescript, and React</p>
         </div>
         <h2>My favorite activities</h2>
         <div class="info">
-            <p>Weightlifting: I have been lifting for about 5-6 years and its something I will never quit.</p>
-            <p>Running: I picked up running back up two years ago and its one of the best ways to get into nature.</p>
+            <p>Weightlifting: I have been lifting for about 7 years and its something I will never quit.</p>
+            <p>Line Dancing: I picked up line dancing in late 2024 and it has become a huge part of my life</p>
             <p>Skiing: I went Skiing for the first time last winter and I plan to make it a routine.</p>
             <p>Fishing: Been fishing since I was a kid, excited for the trout season here at white clay creek.</p>
             <p>Nutrition: I have become a little obsessed with optimal nutrition in the last year or so.</p>
-            <p>Gaming: I mean, who doesn't.</p>
         </div>
     </div>
     <footer>
@@ -68,7 +61,7 @@
         <div class="contact-info">
             <a href="https://github.com/andrewl15"><i class="ri-github-fill"></i><p>Github</p></a>
             <a href="https://www.linkedin.com/in/andrew-long-457171164/"><i class="ri-linkedin-box-fill"></i><p>Linkedin</p></a>
-            <i class="ri-mail-line"></i><p>andrewl@udel.edu</p>
+            <i class="ri-mail-line"></i><p>longandrew321@gmail.com</p>
         </div>
     </footer>
     <script src="./javascript/navbar.js"></script>
