--- a/projects.html
+++ b/projects.html
@@ -1,11 +1,12 @@
 <!DOCTYPE HTML>
 <html lang="en">
+
 <head>
     <title>Projects</title>
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-9ZCFW84LPH"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
-        function gtag(){dataLayer.push(arguments);}
+        function gtag() { dataLayer.push(arguments); }
         gtag('js', new Date());
 
         gtag('config', 'G-9ZCFW84LPH');
@@ -15,12 +16,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/remixicon@3.5.0/fonts/remixicon.css" rel="stylesheet">
 </head>
+
 <body>
     <header>
         <nav>
             <input type="checkbox" id="check" class="checkbtn">
             <label for="check" class="checkbtn">
-                <i class="ri-menu-line"></i>          
+                <i class="ri-menu-line"></i>
             </label>
             <label for="check" class="xbtn">
                 <i class="ri-close-fill"></i>
@@ -35,18 +37,75 @@
                 <li><a href="aboutMe.html">About Me</a></li>
                 <li><a href="contact.html">Contact</a></li>
                 <li><a href="resume.html">Resume</a></li>
-                <li><a class="class-links-btn" id="class-links-btn">Class Links ⬅️</a></li>
             </ul>
-            <div class="class-dropdown">
-                <div class="dropdown-item"><a class="class-links" href="https://mattm401.github.io/">Course Website</a></div>
-                <div class="dropdown-item"><a class="class-links" href="https://yang-yu-xing.github.io/">NEXT STUDENT</a></div>
-                <div class="dropdown-item"><a class="class-links" href="https://estipes.github.io/">PREVIOUS STUDENT</a></div>
-            </div>  
             <script src='./javascript/scroll.js'></script>
         </nav>
     </header>
     <div class="container">
-        <div class="project-title"><h1>Project "Lens"</h1></div>
+        <div class="left-sub-container">
+            <a class="project-image-left" href="https://github.com/andrewl15/Trellis---Crowd-Funding">
+                <img src="./pics/trellis.png" alt="Gene">
+            </a>
+            <div class="left-list">
+                <ul>
+                    <li>A campaign crowdfunding application </li>
+                    <li>This application allows users to register, log in, and securely create or fund campaigns
+                    </li>
+                    <li>This is a Full Stack Application with Java and SpringBoot as backend</li>
+
+                    <li>Used Java, React, Javascript, PostrgreSQL, Spring Boot</li>
+                </ul>
+            </div>
+        </div>
+        <p class="p-left"></p>
+        <div class="project-title">
+            <h1>Line Dancing App</h1>
+        </div>
+        <div class="left-sub-container">
+            <a class="project-image-left" href="https://github.com/andrewl15/LineDancingApp">
+                <img src="./pics/linedance.png" alt="Gene">
+            </a>
+            <div class="left-list">
+                <ul>
+                    <li>A digital transfer app </li>
+                    <li>This application allows users to search line dancing songs and add them to their learning list
+                    </li>
+                    <li>This is a Full Stack Application with Java and SpringBoot as backend and React, Javascript as
+                    <li>Used Java, SpringBoot, Javascript, React, and PostgreSQL database</li>
+                </ul>
+                <h2>Challenges</h2>
+                <ul>
+                    <li>Using Jsoup, a web scrapper to get dance information from Copperknob</li>
+                </ul>
+            </div>
+        </div>
+        <p class="p-left"></p>
+        <div class="project-title">
+            <h1>TE Bucks - Digital Transfer App</h1>
+        </div>
+        <div class="left-sub-container">
+            <a class="project-image-left" href="https://github.com/andrewl15/TE-Bucks-Digital-Transfer-App">
+                <img src="./pics/tebucks.png" alt="Gene">
+            </a>
+            <div class="left-list">
+                <ul>
+                    <li>A digital transfer application </li>
+                    <li>This application allows users to register, log in, send and request money from other users
+                    </li>
+                    <li>This is a Full Stack Application with Java and SpringBoot as backend and React, Javascript as
+                        frontend</li>
+                    <li>Used Java, React, Javascript, PostrgreSQL, Spring Boot</li>
+                </ul>
+            </div>
+        </div>
+        <p class="p-left"></p>
+        <div class="project-title">
+            <h1>Trellis - Crowd-Funding</h1>
+        </div>
+        
+        <div class="project-title">
+            <h1>Project "Lens"</h1>
+        </div>
         <div class="left-sub-container">
             <a class="project-image-left" href="https://team-lens.github.io/Project-Lens/">
                 <img src="./pics/lens.png" alt="Gene">
@@ -54,7 +113,8 @@
             <div class="left-list">
                 <ul>
                     <li>A photo website similar to Instagram’s, built for photography enthusiasts</li>
-                    <li>The site would be like linkedin, where users can hire and create associations with other users</li>
+                    <li>The site would be like linkedin, where users can hire and create associations with other users
+                    </li>
                     <li>Used HTML, CSS, JavaScript, Google Firebase</li>
                 </ul>
                 <h2>Challenges</h2>
@@ -64,15 +124,18 @@
                 </ul>
             </div>
         </div>
-        <p class="p-left">Collaboration: Alexander Daley, Mbiet Uko, Pranav Kamath</p>
-        <div class="project-title"><h1>Senior Design Project</h1></div>
+        <p class="p-left"></p>
+        <div class="project-title">
+            <h1>Senior Design Project</h1>
+        </div>
         <div class="left-sub-container">
             <a class="project-image-left" href="http://cisc-capstone-teams.pages.eecis.udel.edu/Home">
                 <img src="./pics/gene.png" alt="Gene">
             </a>
             <div class="left-list">
                 <ul>
-                    <li>This is my Senior Design Project that my team and I worked on alongside Professor Duncan, a UD Professor of Biology</li>
+                    <li>This is my Senior Design Project that my team and I worked on alongside Professor Duncan, a UD
+                        Professor of Biology</li>
                     <li>We were tasked with building a website capable of displaying gene data</li>
                     <li>Used React Typescript, Plotly plotting library, and Router</li>
                 </ul>
@@ -83,8 +146,10 @@
                 </ul>
             </div>
         </div>
-        <p class="p-left">Collaboration: Kurt Hammen, Mar Tejador, Caroline Robinette, Justin Tenerelli</p>
-        <div class="project-title"><h1>Student Course Registration Site</h1></div>
+        <p class="p-left"></p>
+        <div class="project-title">
+            <h1>Student Course Registration Site</h1>
+        </div>
         <div class="left-sub-container">
             <a class="project-image-left" href="https://ud-cisc275-s22.github.io/cis-scheduler-team-11/">
                 <img src="./pics/275.png" alt="Gene">
@@ -102,17 +167,25 @@
                 </ul>
             </div>
         </div>
-        <p class="p-left">Collaboration: Andrew Gkonos, Shaun Gupta</p>
-        <div class="project-title"><h1>And of course, my own website which you are on!</h1></div>
+        <p class="p-left"></p>
+        <div class="project-title">
+            <h1>And of course, my own website which you are on!</h1>
+        </div>
     </div>
     <footer>
         <h3>My Contact Information</h3>
         <div class="contact-info">
-            <a href="https://github.com/andrewl15"><i class="ri-github-fill"></i><p>Github</p></a>
-            <a href="https://www.linkedin.com/in/andrew-long-457171164/"><i class="ri-linkedin-box-fill"></i><p>Linkedin</p></a>
-            <i class="ri-mail-line"></i><p>andrewl@udel.edu</p>
+            <a href="https://github.com/andrewl15"><i class="ri-github-fill"></i>
+                <p>Github</p>
+            </a>
+            <a href="https://www.linkedin.com/in/andrew-long-457171164/"><i class="ri-linkedin-box-fill"></i>
+                <p>Linkedin</p>
+            </a>
+            <i class="ri-mail-line"></i>
+            <p>longandrew321@gmail.com</p>
         </div>
     </footer>
     <script src="./javascript/navbar.js"></script>
 </body>
+
 </html>
