--- a/resume.html
+++ b/resume.html
@@ -35,13 +35,7 @@
                 <li><a href="aboutMe.html">About Me</a></li>
                 <li><a href="contact.html">Contact</a></li>
                 <li class="animated bounce"><a class="active" href="resume.html">Resume</a></li>
-                <li><a class="class-links-btn" id="class-links-btn">Class Links ⬅️</a></li>
-            </ul>
-            <div class="class-dropdown">
-                <div class="dropdown-item"><a class="class-links" href="https://mattm401.github.io/">Course Website</a></div>
-                <div class="dropdown-item"><a class="class-links" href="https://yang-yu-xing.github.io/">NEXT STUDENT</a></div>
-                <div class="dropdown-item"><a class="class-links" href="https://estipes.github.io/">PREVIOUS STUDENT</a></div>
-            </div>            
+            </ul>        
             <script src='./javascript/scroll.js'></script>
         </nav>
     </header>
@@ -53,7 +47,7 @@
         <div class="contact-info">
             <a href="https://github.com/andrewl15"><i class="ri-github-fill"></i><p>Github</p></a>
             <a href="https://www.linkedin.com/in/andrew-long-457171164/"><i class="ri-linkedin-box-fill"></i><p>Linkedin</p></a>
-            <i class="ri-mail-line"></i><p>andrewl@udel.edu</p>
+            <i class="ri-mail-line"></i><p>longandrew321@gmail.com</p>
         </div>
     </footer>
     <script src="./javascript/navbar.js"></script>
