--- a/projects.html
+++ b/projects.html
@@ -42,6 +42,9 @@
         </nav>
     </header>
     <div class="container">
+        <div class="project-title">
+            <h1>Trellis - Crowdfunding</h1>
+        </div>
         <div class="left-sub-container">
             <a class="project-image-left" href="https://github.com/andrewl15/Trellis---Crowd-Funding">
                 <img src="./pics/trellis.png" alt="Gene">
