--- a/contact.html
+++ b/contact.html
@@ -48,11 +48,11 @@
     <div class="container">
         <div class="contact-option">
             <p>Anonymous Message!</p>
-            <button class="message" id="writeButton">✏️Write</button>
+            <button class="message" id="writeButton">Write</button>
         </div>
         <div class="contact-option">
             <p>Contact Form</p>
-            <button class="message" id="contactButton">📝Contact</button>
+            <button class="message" id="contactButton">Contact</button>
         </div>
     </div>
     <!--Anonymous Popup-->
